<resources>
    <string name="nav_header_title">Driver Name</string>
    <string name="nav_header_subtitle">driver@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="no_match_password">Passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="submit">Submit</string>
    <string name="take_pic">Open Camera</string>
    <string name="upload_pic">Upload from Storage</string>
    <string name="set_date">Select date</string>
    <string name="list_item_image">list item image</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_subtitle">Enter email address to receive a password reset link.</string>
    <string name="promt_name">Name</string>
    <string name="register_label">Register</string>
    <string name="register_subtitle">Complete form to sign up</string>
    <string name="Update_profile_label">Update profile</string>
    <string name="update_profile_subtitle">Update profile and credentials</string>
    <string name="update_email">Update Email</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_password">Update Password</string>
    <string name="update_email_subtitle">Update your email by inserting your current credentials with a new email address</string>
    <string name="prompt_new_email">New email</string>
    <string name="update_password_subtitle">Update your password by inserting your current credentials with a new email password</string>
    <string name="prompt_new_password">New password</string>
    <string name="update_profile_section_subtitle">Select whether to upload a new profile photo or update name on profile.</string>
    <string name="prompt_new_name">New name</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="delete_profile_subtitle">Enter email address and password to delete your profile.</string>
    <string name="welcome_title">Welcome to Choice Car</string>
    <string name="welcome_subtitle">Manage your verified driver detail. Keep your data secure and control how you share it.</string>
    <string name="profile_title">Driver profile</string>
    <string name="driver_profile_subtitle">Add/update your driver details</string>
    <string name="vehicle_details_title">Vehicle Details</string>
    <string name="vehicle_details_subtitle">Add/update your vehicle details to complete your profile</string>
    <string name="prompt_insert_name">Update name</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="create_my_account">Or create my account</string>
    <string name="license_expiry_date">License Expiry Date</string>
    <string name="drivers_license_no">Drivers License no.</string>
    <string name="date_first_available">Date first available</string>
    <string name="mot_expiry_date">MOT Expiry Date</string>
    <string name="upload_mot">Upload M.O.T</string>
    <string name="upload_private_hire_photo">Upload Private hire photo</string>
    <string name="user_profile">User Profile</string>
    <string name="update_user_profile">Update User Profile</string>
    <string name="car_reg">Car reg</string>
    <string name="car_make">Make</string>
    <string name="car_model">Model</string>
    <string name="name_of_keeper">Name of keeper</string>
    <string name="car_colour">Colour</string>
    <string name="address_of_keeper">Address of Keeper</string>
    <string name="postcode_of_keeper">Postcode of Keeper</string>
    <string name="car_start_date">Start date</string>
    <string name="driver_identifier">driver identifier</string>
    <string name="vehicle_seized">Vehicle Seized</string>
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="ni_number">NI number</string>
    <string name="image_description">basic app image</string>
    <string name="private_hire_license_no">Private Hire License no.</string>
    <string name="private_hire_license_expiry">Private Hire License Expiry</string>
    <string name="upload_private_hire_vehicle_certificate">Upload Private hire vehicle certificate</string>
    <string name="private_hire_certificate_license_no">Private Hire Certificate License no.</string>
    <string name="private_hire_certificate_expiry">Private Hire Certificate Expiry</string>
    <string name="driver_profile">Driver Profile</string>
    <string name="private_hire_license">Private Hire License</string>
    <string name="drivers_license">Drivers License</string>
    <string name="v5c_number">V5C number</string>
    <string name="upload_logbook">Upload logbook</string>
    <string name="or_create_my_account">Or create my account</string>
    <string name="hello_nice_to_meet_you">Hello, nice to meet you!</string>
    <string name="get_a_new_experience">Get a new experience</string>
    <string name="vehicle_profile">Vehicle Profile</string>
    <string name="insurance">Insurance</string>
    <string name="m_o_t">M.O.T</string>
    <string name="log_book">Log book</string>
    <string name="private_hire_vehicle_license">Private Hire Vehicle License</string>
    <string name="upload_insurance_documents">Upload Insurance Documents</string>
    <string name="insurer">Insurer</string>
    <string name="insurance_expiry">Insurance expiry</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="leave_header">Leave?</string>
    <string name="leave_message">Are you sure you want to exit?</string>
    <string name="not_a_driver_message">You are not a driver, request a driver profile to use this app</string>
    <string name="request_driver_profile">Request driver profile</string>
    <string name="or">OR</string>
    <string name="floating_action_button">Floating action button</string>
    <string name="sort">sort</string>
    <string name="denied">Approval denied</string>
    <string name="pending">Pending approval</string>
    <string name="approved">Approved</string>
    <string name="not_submitted">Not submitted</string>
    <string name="empty_view_message">You have no drivers</string>
    <string name="approval_status">approval status</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="decline">Decline</string>
    <string name="no_drivers_to_show">No drivers to show</string>
    <string name="no_drivers_subtext">There are no drivers present for your organisation.</string>
    <string name="no_permission">You do not have permissions to view</string>
    <string name="no_permission_subtext">You are not a super user. Contact us to get super user access.</string>
    <string name="cannot_retrieve">Cannot retrieve data.</string>
    <string name="cannot_retrieve_subtext">Check you are logged in correctly and have a working connection.</string>
    <string name="no_connection">No connection</string>
    <string name="no_connection_subtext">Make you have a valid internet connection.</string>
    <string name="no_authorization">Authentication has failed</string>
    <string name="no_authorization_subtext">There is a problem with authentication.</string>
    <string name="image_icon_for_feedback_view">Image icon for feedback view.</string>
    <string name="user_status">user status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Continue</string>
</resources>
