<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout style="@style/text_input_layout">

            <EditText
                android:id="@+id/reg"
                style="@style/EditTextStyle"
                android:layout_marginBottom="12dp"
                android:autofillHints="none"
                android:hint="@string/car_reg"
                android:inputType="textCapCharacters" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/text_input_layout">

            <EditText
                android:id="@+id/make"
                style="@style/EditTextStyle"
                android:layout_marginBottom="12dp"
                android:hint="@string/car_make"
                android:importantForAutofill="no"
                android:inputType="none"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/text_input_layout">

            <EditText
                android:id="@+id/car_model"
                style="@style/EditTextStyle"
                android:layout_marginBottom="12dp"
                android:hint="@string/car_model"
                android:importantForAutofill="no"
                android:inputType="none"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/text_input_layout">

            <EditText
                android:id="@+id/colour"
                style="@style/EditTextStyle"
                android:layout_marginBottom="12dp"
                android:autofillHints="color"
                android:hint="@string/car_colour"
                android:inputType="none"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/text_input_layout">

            <EditText
                android:id="@+id/keeper_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/name_of_keeper"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/text_input_layout">

            <EditText
                android:id="@+id/address"
                style="@style/EditTextStyle"
                android:layout_marginBottom="12dp"
                android:autofillHints="postalAddress"
                android:gravity="top|start"
                android:hint="@string/address_of_keeper"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="7"
                android:minLines="4"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout style="@style/text_input_layout">

            <EditText
                android:id="@+id/postcode"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:autofillHints="postalCode"
                android:hint="@string/postcode_of_keeper"
                android:inputType="none|textCapCharacters"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/text_input_layout">

            <EditText
                android:id="@+id/start_date"
                style="@style/EditTextStyle.Date"
                android:layout_marginBottom="12dp"
                android:autofillHints="date"
                android:hint="@string/car_start_date" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/seized_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:buttonTint="@color/colour_eight"
            android:hint="@string/vehicle_seized"
            android:padding="12dp"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            style="@style/TextButton.WithIcon"
            android:layout_gravity="end"
            android:layout_marginBottom="48dp"
            android:text="@string/submit" />
    </LinearLayout>

</ScrollView>