<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    style="@style/parent_constraint_layout"
    tools:context="ui.user.ForgotPasswordFragment">

    <TextView
        android:id="@+id/login_title_tv"
        style="@style/headerStyle"
        android:layout_marginBottom="12dp"
        android:text="@string/update_password"
        app:layout_constraintBottom_toTopOf="@id/login_subtitle_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_subtitle_tv"
        style="@style/subheader"
        android:layout_marginBottom="24dp"
        android:text="@string/update_password_subtitle"
        app:layout_constraintBottom_toTopOf="@id/til_old_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_old_email"
        style="@style/text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/til_password_top">

        <EditText
            android:id="@+id/email_update"
            style="@style/EditTextStyle"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_top"
        style="@style/text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_old_email">

        <EditText
            android:id="@+id/password_top"
            style="@style/EditTextStyle"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:autofillHints="password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_password"
        style="@style/text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password_top">

        <EditText
            android:id="@+id/password_bottom"
            style="@style/EditTextStyle"
            android:hint="@string/prompt_new_password"
            android:inputType="textPassword"
            android:autofillHints="password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/email_sign_up"
        style="@style/TextButton.WithIcon"
        android:text="@string/submit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_new_password">

    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>