<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/parent_constraint_layout"
    tools:context=".ui.driverprofile.PrivateHireLicenseFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxWidth="350dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/uploadphlic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:src="@drawable/driver_license_private_hire"
            android:contentDescription="@string/image_description" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadphlic"
        style="@style/TextButton.Rounded"
        android:layout_marginBottom="12dp"
        android:text="@string/upload_private_hire_photo"
        app:layout_constraintBottom_toTopOf="@id/til_submission"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_submission"
        style="@style/text_input_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ph_no"
            style="@style/EditTextStyle"
            android:hint="@string/private_hire_license_no"
            android:importantForAutofill="no"
            tools:ignore="TextFields"
            tools:text="987651"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_ph_expiry"
        style="@style/text_input_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_submission">

        <EditText
            android:id="@+id/ph_expiry"
            style="@style/EditTextStyle.Date"
            android:hint="@string/private_hire_license_expiry"
            android:autofillHints="date"
            tools:text="30/12/2018"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        style="@style/TextButton.WithIcon"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_submission"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>